# AuralPrimer

./: .gitattributes  .gitignore  BUILDING.md  DRUM_TRANSCRIPTION_ALGORITHM_NOTES.md  PROJECT_ARCH_FROM_MEMORY.md  README.md  TRANSCRIPTION_RECOVERY_NOTES.md  TRANSCRIPTION_REGRESSION_HISTORY.md  build_psalms.py  build_psalms_midi.py  build_sidecar.ps1  create_portable.ps1  package-lock.json  package.json  run_drum_benchmark.py  spec.md  tsconfig.json  vitest.config.ts  wip.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: audio_decode.rs  audio_engine.rs  demo_songpack.rs  ghwt.rs  ingest_sidecar.rs  lib.rs  main.rs  midi_clock.rs  midi_clock_input.rs  midi_clock_service.rs  models.rs  native_audio.rs  raw_song.rs  stem_midi.rs  wav_mix.rs
apps/desktop/src-tauri/tests/: demo_songpack.rs  ghwt_importer.rs  raw_song_importer.rs  stem_midi_creator.rs
python/ingest/: aural_ingest.spec  pyproject.toml  requirements-dev.txt  requirements-runtime.txt
python/ingest/scripts/: SETUP-D3RM.md  d3rm_wsl_transcribe.sh  download_piano_pti_checkpoint.py  generate_drum_benchmark_midis.py  import_song_across_drum_engines.py  run_drum_benchmark_suite.py  run_drum_reference_shootout.py
python/ingest/src/aural_ingest/: __init__.py  cli.py  drum_benchmark.py  drum_benchmark_suite.py  drum_reference_shootout.py  guitar_split.py  melodic_benchmark.py  melodic_benchmark_suite.py  mt3_compat.py  piano_benchmark.py  piano_benchmark_suite.py  piano_refinement.py  progress.py  quality_benchmark.py  transcription.py
python/ingest/src/aural_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/ingest/src/aural_ingest/algorithms/: __init__.py  _common.py  adaptive_beat_grid.py  adaptive_beat_grid_multilabel.py  aural_onset.py  beat_conditioned_multiband_decoder.py  combined_filter.py  (+44 more)
python/ingest/tests/: test_algorithms_common_primitives.py  test_algorithms_stubs.py  test_benchmark_threshold_checker.py  test_cli_misc.py  test_drum_5class_taxonomy.py  test_drum_benchmark.py  test_drum_benchmark_suite.py  test_drum_psalm_12_equivalent.py  test_drum_reference_shootout.py  test_drum_sparse_source_precision.py  test_import_pipeline.py  test_ingest_quality_improvements.py  test_ingest_runtime_benchmarks.py  test_mt3_compat.py  test_piano_benchmark.py  test_piano_cleanup.py  test_piano_polyphonic.py  test_piano_refinement.py  test_piano_research_adapters.py  test_progress.py  test_quality_benchmark.py  test_songpack_manifest_schema.py  test_transcription_orchestration.py  test_transcription_resilience.py
(+294 files in other folders)
