[project]
name = "aural_ingest"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "beartype>=0.22.9",
  "demucs==4.0.1",
  "librosa>=0.11.0",
  "mt3-infer[torch]==0.1.3",
  "numpy>=2.0.0",
  "pytorch-lightning==2.6.1",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.0",
  "soundfile>=0.13.0",
  "torch==2.11.0",
  "torchaudio==2.11.0",
  "torchvision==0.26.0",
  "transformers==4.49.0",
  "x-transformers>=2.17.7",
]

[project.scripts]
aural_ingest = "aural_ingest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/aural_ingest --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=80"

[tool.ruff]
line-length = 100

[tool.coverage.run]
branch = true
source = ["aural_ingest"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
