[package]
name = "auralprimer_desktop_tauri"
version = "0.0.0"
edition = "2021"

# Tauri runs `cargo run` under the hood. Since we have multiple binaries
# (the app plus helper tools like `raw_import`), set an explicit default.
default-run = "auralprimer_desktop_tauri"

[features]
default = []
asio = ["cpal/asio"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
midir = "0.10"
midly = "0.5"

# Phase 1 native playback engine
cpal = "0.15"
rtrb = "0.3"

# Phase 1.5 decode
# NOTE: Many .ogg files in the wild are Opus, not Vorbis.
# Symphonia 0.5.5 does not expose an `opus` feature directly on the top-level crate;
# use all-codecs/formats to ensure broad support.
symphonia = { version = "0.5", default-features = false, features = ["all-codecs", "all-formats"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true
